<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MINT</string>

    <!--    Titles    -->
    <string name="command_one_title">Command 1</string>
    <string name="command_two_title">Command 2</string>
    <string name="command_three_title">Command 3</string>
    <string name="command_four_title">Command 4</string>

    <!--    Explanation    -->
    <string name="command_explanation">Type a text you wish the phone to say and title the command</string>

    <!--    Play and Save   -->
    <string name="play">Play</string>
    <string name="save">Save</string>

    <!--    Title and Text   -->
    <string name="title">Title</string>
    <string name="text">Text</string>

    <!--    Bluetooth    -->
    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search Devices / Cancel</string>
    <string name="Bluetooth">Bluetooth</string>

    <!--    Settings    -->
    <string name="settings">Settings</string>
    <string name="name">Name</string>

    <!--    Automation Commands-->
    <string-array name="commands">
        <item>Turn on lights</item>
        <item>Turn off lights</item>
        <item>Tell joke</item>
        <item>Ask weather</item>
    </string-array>

</resources>