<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/go_back_from_bluetooth"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_arrow_back_black_24dp" />

    <LinearLayout
        android:id="@+id/arrowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/textView"
            android:layout_width="129dp"
            android:layout_height="127dp"
            android:src="@mipmap/brain_foreground"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrowLayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/bg_gainsboro_border"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/Bluetooth"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">

                <Button
                    android:id="@+id/turnOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    app:backgroundTint="#2BC9AF" />

                <Button
                    android:id="@+id/turnOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/off"
                    app:backgroundTint="#2BC9AF"/>

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_gainsboro_border">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

            <ListView
                android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="200dp">
            </ListView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/paired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/List"
                android:layout_marginTop="5dp"
                app:backgroundTint="#2BC9AF"/>

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Find"
                app:backgroundTint="#2BC9AF"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

<!--https://examples.javacodegeeks.com/android/core/bluetooth/bluetoothadapter/android-bluetooth-example/-->